# PyRoomStudio

./: .clang-format  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  INSTRUCTIONS.md  LICENSE  LISTENER_FEATURE_GUIDE.md  PLAN.md  PyRoomStudio.py  README.md  RESTRUCTURING_SUMMARY.md  acoustic.py  acoustic_simulator.py  build_macos.sh  build_web.sh  build_windows.sh  click_test.py  generate_test_audio.py  gui.py  index.html  justfile  main.py  main_gui.py  release-draft.md  release_linux.sh  release_macos.sh  release_windows.sh  render.py  render2.py  render3.py  requirements.txt  room_from_stl.py  run_tests.sh  scene_manager.py  theme.json  treefmt.toml  utils.py
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
build-qtcheck/: CMakeCache.txt
gui/: __init__.py  application.py  base_components.py  constants.py  gallery_components.py  input_components.py  menu_components.py  panel_components.py
materials/audience_seating/: adult_office_furniture_per_desk.mat  adults_in_plastic_and_metal_chairs.mat  adults_in_wooden_or_padded_chairs_per_item.mat  adults_on_timber_seats_1_per_m2.mat  adults_on_timber_seats_2_per_m2.mat  adults_per_person_seated.mat  adults_per_person_standing.mat  areas_with_audience_orchestra_or_seats_including_aisles.mat  auditorium_seat_occupied.mat  auditorium_seat_unoccupied.mat  children_seated_in_plastic_or_metal_chairs_per_child.mat  children_standing_per_child.mat  cloth_upholstered_seats_per_m2.mat  empty_plastic_or_metal_chairs_per_chair.mat  floor_and_cloth_upholstered_seats_per_m2.mat  fully_upholstered_seats_per_item.mat  orchestra_with_instruments_on_podium.mat  orchestral_player_with_instrument_average.mat  proscenium_opening_with_average_stage_set.mat  seating_slightly_upholstered_occupied.mat  seating_slightly_upholstered_unoccupied.mat  seats_leather_covers_per_m2.mat  students_seated_in_tablet_arm_chairs.mat  upholstered_tip_up_theatre_seats_empty.mat  wood_platform_with_large_space_beneath.mat  wooden_or_padded_chairs_per_item.mat
materials/ceilings/: 0_8mm_perforated_metal_tiles_13_percent_open_fibreglass.mat  0_8mm_unperforated_metal_panels_backed_fibreglass_on_pipes.mat  100mm_woodwool_fixed_directly_to_concrete_pre_screeded.mat  100mm_woodwool_slabs_on_25mm_cavity_pre_screeded.mat  12_percent_perforated_plaster_tiles_felt_200mm_void.mat  50mm_mineral_wool_25_percent_open_perforated_steel.mat  50mm_woodwool_slabs_on_25mm_cavity_pre_screeded.mat  75mm_woodwool_fixed_directly_to_concrete_pre_screeded.mat  gypsum_plaster_tiles_17_percent_perforated.mat  hardboard_25_percent_perforated_over_50mm_mineral_wool.mat  metal_ceiling_32_5_percent_perforated_backed_rockwool.mat  mineral_wool_tiles_180mm_airspace.mat  mineral_wool_tiles_glued_screwed_to_soffit.mat  perforated_underside_structural_steel_decking.mat  plaster_decorative_panels_ceilings.mat  plasterboard_10mm_backed_with_25mm_bitumen.mat  plasterboard_10mm_perforated_14_percent_open_area_90mm_battens.mat  plywood_12mm_perforated_11_percent_open_area_60mm_air_space.mat  plywood_12mm_perforated_11_percent_open_with_60mm_fibreglass.mat  plywood_12mm_with_30mm_fibreglass_between_battens.mat  plywood_5mm_on_battens_50mm_airspace_glass_wool.mat  wood_panels_18mm_alternate_slot_and_slat_rockwool.mat
materials/floors/: 5mm_needle_felt_stuck_to_concrete.mat  6mm_pile_carpet_bonded_closed_cell_foam_underlay.mat  6mm_pile_carpet_bonded_open_cell_foam_underlay.mat  9mm_pile_carpet_tufted_on_felt_underlay.mat  carpet_needlepunch_5mm.mat  carpet_thin_over_thin_felt_on_concrete.mat  carpet_thin_over_thin_felt_on_wood_floor.mat  composition_flooring.mat  cork_floor_tiles_14mm.mat  floor_tiles_plastic_or_linoleum.mat  haircord_carpet_on_felt_underlay.mat  linoleum_or_vinyl_stuck_to_concrete.mat  medium_pile_carpet_on_sponge_rubber_underlay.mat  parquet_fixed_in_asphalt_on_concrete.mat  parquet_on_counterfloor.mat  raised_computer_floor_no_carpet.mat  raised_computer_floor_with_carpet_tiles.mat  rubber_cork_linoleum_or_vinyl_with_underlay_on_concrete.mat  rubber_floor_tiles.mat  sheet_rubber_hard_6mm.mat  smooth_marble_or_terrazzo_slabs.mat  steel_decking.mat  stone_floor_plain_or_tooled_or_granolithic_finish.mat  thick_pile_carpet_on_sponge_rubber_underlay.mat  woodblock_linoleum_rubber_cork_tiles_thin_on_solid_floor.mat  wooden_floor_on_joists.mat
materials/glass_glazing/: 4mm_glass.mat  6mm_glass.mat  double_glazing_2_3mm_glass_10mm_air_gap.mat
materials/masonry_walls/: breeze_block.mat  brickwork_10mm_flush_pointing.mat  ceramic_tiles_smooth_surface.mat  clinker_concrete.mat  glaze_plaster_on_masonry_wall.mat  lime_cement_plaster_on_masonry_wall.mat  painted_plaster_surface_on_masonry_wall.mat  plaster_lime_or_gypsum_on_solid_backing.mat  plaster_on_masonry_wall_with_wallpaper.mat  plaster_on_solid_wall.mat  porous_concrete_blocks.mat  rough_concrete.mat  smooth_brickwork_flush_pointing.mat  smooth_brickwork_flush_pointing_painted.mat  smooth_concrete_painted_or_glazed.mat  smooth_unpainted_concrete.mat  standard_brickwork.mat
materials/mineral_wool_foams/: 12mm_expanded_polystyrene_on_45mm_battens.mat  25mm_expanded_polystyrene_on_50mm_battens.mat  fibreglass_bitumen_bonded_mat_25mm.mat  fibreglass_bitumen_bonded_mat_50mm.mat  fibreglass_resin_bonded_board_25mm.mat  fibreglass_resin_bonded_mat_25mm.mat  fibreglass_resin_bonded_mat_50mm.mat  (+29 more)
old/: gui.py  room_from_stl.py
panda3D/: main.py
prs/: pyvenv.cfg
resources/: Cube_rounded.stl  Room1.STL  Room2.STL  Seiche.icns  Semi-Sphere.stl  resources.qrc  test.room  test2.room  test3.room
scripts/: generate_macos_icon.sh
src/: main.cpp
test_files/: Room3.STL  Room4.STL  Room5.STL  example.room
tests/: CMakeLists.txt  __init__.py  test_acoustic_simulation.cpp  test_acoustic_simulation.py  test_acoustics.cpp  test_audio.cpp  test_core.cpp  test_coverage.cpp  test_gui.cpp  test_hrtf.cpp  test_material_loader.cpp  test_mesh.cpp  test_project_file.cpp  test_render_cli.cpp  test_render_options_dialog.cpp  test_render_support.cpp  test_rendering.cpp  test_scene_manager.cpp
(+210 files in other folders)
